css header spacing fix

--- a/css/mystyle_dataset.css
+++ b/css/mystyle_dataset.css
@@ -34,7 +34,7 @@ header img {
 }
 @media (min-width: 768px) {
   header .container {
-    padding-top: 95px;
+    padding-top: 55px;
     padding-bottom: 25px;
   }
 }
